trying to center cards while on mobile version, was able to do it but not sure if it was done correctly.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,9 @@
 body{
     background-color: var(--lightPurple);
 }
-
+#navbarSupportedContent{
+    color:green;
+}
 .jumbotron-fluid{
     background-color: var(--dark);
 }
